--- a/Upbit Transaction.ipynb
+++ b/Upbit Transaction.ipynb
@@ -78,7 +78,7 @@
     "rsi_period = 14\n",
     "\n",
     "# Discord webhook URL\n",
-    "webhook_url = \"https://discord.com/api/webhooks/954074224732033044/PNJM8t_MFR8JX7LkkRvpKjNHPGaKNSf7GgJDC3SzDK67xbLSezDYY9x9Nyn3Ykcbh5mz\"\n",
+    "webhook_url = \"REDACTED FOR SECURITY REASON"\n",
     "\n",
     "buy_points = []  # List to track buy signal indices\n",
     "sell_points = []  # List to track sell signal indices\n",
