--- a/Upbit Transaction.ipynb
+++ b/Upbit Transaction.ipynb
@@ -14,53 +14,71 @@
      "text": [
       "[INFO] Successfully logged in to Upbit API\n",
       "[INFO] Checking Buy Signal...\n",
-      "[INFO] Reason for Not Sending Buy Signal: MACD: 18643.93002179265 <= Signal: 14327.449069204335 or RSI: 59.75397290532389 >= 30\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 19045.22264934331 <= Signal: 16032.91053602282 or RSI: 59.20189455159842 >= 30\n",
       "[INFO] Checking Sell Signal...\n",
-      "[INFO] Reason for Not Sending Sell Signal: MACD: 17925.981303848326 >= Signal: 14183.859325615469\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 19045.22264934331 >= Signal: 16032.91053602282\n",
       "[INFO] Checking Buy Signal...\n",
-      "[INFO] Reason for Not Sending Buy Signal: MACD: 18723.702101565897 <= Signal: 14343.403485158984 or RSI: 60.004812767617565 >= 30\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 19124.99472911656 <= Signal: 16048.86495197747 or RSI: 59.39692730648808 >= 30\n",
       "[INFO] Checking Sell Signal...\n",
-      "[INFO] Reason for Not Sending Sell Signal: MACD: 18723.702101565897 >= Signal: 14343.403485158984\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17529.553133666515 >= Signal: 15729.77663288746\n",
       "[INFO] Checking Buy Signal...\n",
-      "[INFO] Reason for Not Sending Buy Signal: MACD: 19185.09275737405 <= Signal: 15311.741339601997 or RSI: 59.73476436908337 >= 30\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17529.553133666515 <= Signal: 15729.77663288746 or RSI: 54.25072496711094 >= 30\n",
       "[INFO] Checking Sell Signal...\n",
-      "[INFO] Reason for Not Sending Sell Signal: MACD: 19264.864837139845 >= Signal: 15327.695755555156\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17529.553133666515 >= Signal: 15729.77663288746\n",
       "[INFO] Checking Buy Signal...\n",
-      "[INFO] Reason for Not Sending Buy Signal: MACD: 19185.09275737405 <= Signal: 15311.741339601997 or RSI: 59.73476436908337 >= 30\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17449.78105390072 <= Signal: 15713.822216934303 or RSI: 54.012977055414325 >= 30\n",
       "[INFO] Checking Sell Signal...\n",
-      "[INFO] Reason for Not Sending Sell Signal: MACD: 19185.09275737405 >= Signal: 15311.741339601997\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17449.78105390072 >= Signal: 15713.822216934303\n",
       "[INFO] Checking Buy Signal...\n",
-      "[INFO] Reason for Not Sending Buy Signal: MACD: 19185.09275737405 <= Signal: 15311.741339601997 or RSI: 59.73476436908337 >= 30\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 16096.119518868625 <= Signal: 15790.281677321167 or RSI: 54.22899325099222 >= 30\n",
       "[INFO] Checking Sell Signal...\n",
-      "[INFO] Reason for Not Sending Sell Signal: MACD: 19185.09275737405 >= Signal: 15311.741339601997\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 16096.119518868625 >= Signal: 15790.281677321167\n",
       "[INFO] Checking Buy Signal...\n",
-      "[INFO] Reason for Not Sending Buy Signal: MACD: 19264.864837139845 <= Signal: 15327.695755555156 or RSI: 60.004812767617565 >= 30\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 16415.207837961614 <= Signal: 15854.099341139765 or RSI: 55.073138326412916 >= 30\n",
       "[INFO] Checking Sell Signal...\n",
-      "[INFO] Reason for Not Sending Sell Signal: MACD: 19185.09275737405 >= Signal: 15311.741339601997\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17611.78903453797 >= Signal: 16093.415580455036\n",
       "[INFO] Checking Buy Signal...\n",
-      "[INFO] Reason for Not Sending Buy Signal: MACD: 17270.562842845917 <= Signal: 14928.83535669637 or RSI: 53.91172179807854 >= 30\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17611.78903453797 <= Signal: 16093.415580455036 or RSI: 57.979308798429194 >= 30\n",
       "[INFO] Checking Sell Signal...\n",
-      "[INFO] Reason for Not Sending Sell Signal: MACD: 19105.3206776008 >= Signal: 15295.786923647347\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17611.78903453797 >= Signal: 16093.415580455036\n",
       "[INFO] Checking Buy Signal...\n",
-      "[INFO] Reason for Not Sending Buy Signal: MACD: 19105.3206776008 <= Signal: 15295.786923647347 or RSI: 59.46713575671342 >= 30\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17611.78903453797 <= Signal: 16093.415580455036 or RSI: 57.979308798429194 >= 30\n",
       "[INFO] Checking Sell Signal...\n",
-      "[INFO] Reason for Not Sending Sell Signal: MACD: 17350.334922619164 >= Signal: 14944.78977265102\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17611.78903453797 >= Signal: 16093.415580455036\n",
       "[INFO] Checking Buy Signal...\n",
-      "[INFO] Reason for Not Sending Buy Signal: MACD: 17350.334922619164 <= Signal: 14944.78977265102 or RSI: 54.13158996315297 >= 30\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17611.78903453797 <= Signal: 16093.415580455036 or RSI: 57.979308798429194 >= 30\n",
       "[INFO] Checking Sell Signal...\n",
-      "[INFO] Reason for Not Sending Sell Signal: MACD: 19025.548597827554 >= Signal: 15279.832507692698\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17611.78903453797 >= Signal: 16093.415580455036\n",
       "[INFO] Checking Buy Signal...\n",
-      "[INFO] Reason for Not Sending Buy Signal: MACD: 19025.548597827554 <= Signal: 15279.832507692698 or RSI: 59.20189455159842 >= 30\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17611.78903453797 <= Signal: 16093.415580455036 or RSI: 57.979308798429194 >= 30\n",
       "[INFO] Checking Sell Signal...\n",
-      "[INFO] Reason for Not Sending Sell Signal: MACD: 19025.548597827554 >= Signal: 15279.832507692698\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17611.78903453797 >= Signal: 16093.415580455036\n",
       "[INFO] Checking Buy Signal...\n",
-      "[INFO] Reason for Not Sending Buy Signal: MACD: 17270.562842845917 <= Signal: 14928.83535669637 or RSI: 53.91172179807854 >= 30\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17611.78903453797 <= Signal: 16093.415580455036 or RSI: 57.979308798429194 >= 30\n",
       "[INFO] Checking Sell Signal...\n",
-      "[INFO] Reason for Not Sending Sell Signal: MACD: 17270.562842845917 >= Signal: 14928.83535669637\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17611.78903453797 >= Signal: 16093.415580455036\n",
       "[INFO] Checking Buy Signal...\n",
-      "[INFO] Reason for Not Sending Buy Signal: MACD: 19025.548597827554 <= Signal: 15279.832507692698 or RSI: 59.20189455159842 >= 30\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17611.78903453797 <= Signal: 16093.415580455036 or RSI: 57.979308798429194 >= 30\n",
       "[INFO] Checking Sell Signal...\n",
-      "[INFO] Reason for Not Sending Sell Signal: MACD: 19025.548597827554 >= Signal: 15279.832507692698\n"
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17611.78903453797 >= Signal: 16093.415580455036\n",
+      "[INFO] Checking Buy Signal...\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17611.78903453797 <= Signal: 16093.415580455036 or RSI: 57.979308798429194 >= 30\n",
+      "[INFO] Checking Sell Signal...\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17611.78903453797 >= Signal: 16093.415580455036\n",
+      "[INFO] Checking Buy Signal...\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17691.56111431122 <= Signal: 16109.369996409685 or RSI: 58.15974267968463 >= 30\n",
+      "[INFO] Checking Sell Signal...\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17611.78903453797 >= Signal: 16093.415580455036\n",
+      "[INFO] Checking Buy Signal...\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17611.78903453797 <= Signal: 16093.415580455036 or RSI: 57.979308798429194 >= 30\n",
+      "[INFO] Checking Sell Signal...\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17611.78903453797 >= Signal: 16093.415580455036\n",
+      "[INFO] Checking Buy Signal...\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17538.014215558767 <= Signal: 16382.335307475782 or RSI: 57.97930879842921 >= 30\n",
+      "[INFO] Checking Sell Signal...\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17538.014215558767 >= Signal: 16382.335307475782\n",
+      "[INFO] Checking Buy Signal...\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17538.014215558767 <= Signal: 16382.335307475782 or RSI: 57.97930879842921 >= 30\n"
      ]
     }
    ],
@@ -78,7 +96,7 @@
     "rsi_period = 14\n",
     "\n",
     "# Discord webhook URL\n",
-    "webhook_url = \"REDACTED FOR SECURITY REASON"\n",
+    "webhook_url = \"REDACTED FOR SECURITY REASON\"\n",
     "\n",
     "buy_points = []  # List to track buy signal indices\n",
     "sell_points = []  # List to track sell signal indices\n",
@@ -162,8 +180,8 @@
     "\n",
     "\n",
     "def main():\n",
-    "    access_key = \"YOUR_ACCESS_KEY\"\n",
-    "    secret_key = \"YOUR_SECRET_KEY\"\n",
+    "    access_key = \"n6RhZqpXP76AfUzU7VXw9Zmc15IKRxDnVohvwBtB\"\n",
+    "    secret_key = \"eGIxtX2FuN03Froae1QwRgWNVc3l8n7WD21F60PB\"\n",
     "    upbit = login_to_upbit(access_key, secret_key)\n",
     "    ticker = \"KRW-BTC\"\n",
     "    buy_price = None\n",
