--- a/Upbit Transaction.ipynb
+++ b/Upbit Transaction.ipynb
@@ -78,7 +78,48 @@
       "[INFO] Checking Sell Signal...\n",
       "[INFO] Reason for Not Sending Sell Signal: MACD: 17538.014215558767 >= Signal: 16382.335307475782\n",
       "[INFO] Checking Buy Signal...\n",
-      "[INFO] Reason for Not Sending Buy Signal: MACD: 17538.014215558767 <= Signal: 16382.335307475782 or RSI: 57.97930879842921 >= 30\n"
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17538.014215558767 <= Signal: 16382.335307475782 or RSI: 57.97930879842921 >= 30\n",
+      "[INFO] Checking Sell Signal...\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17538.014215558767 >= Signal: 16382.335307475782\n",
+      "[INFO] Checking Buy Signal...\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17538.014215558767 <= Signal: 16382.335307475782 or RSI: 57.97930879842921 >= 30\n",
+      "[INFO] Checking Sell Signal...\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17538.014215558767 >= Signal: 16382.335307475782\n",
+      "[INFO] Checking Buy Signal...\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17538.014215558767 <= Signal: 16382.335307475782 or RSI: 57.97930879842921 >= 30\n",
+      "[INFO] Checking Sell Signal...\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17538.014215558767 >= Signal: 16382.335307475782\n",
+      "[INFO] Checking Buy Signal...\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17617.786295332015 <= Signal: 16398.289723430433 or RSI: 58.17355804804556 >= 30\n",
+      "[INFO] Checking Sell Signal...\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17617.786295332015 >= Signal: 16398.289723430433\n",
+      "[INFO] Checking Buy Signal...\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 17059.381736919284 <= Signal: 16286.608811747885 or RSI: 56.40751121560675 >= 30\n",
+      "[INFO] Checking Sell Signal...\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 17059.381736919284 >= Signal: 16286.608811747885\n",
+      "[INFO] Checking Buy Signal...\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 16979.609657153487 <= Signal: 16270.654395794725 or RSI: 56.153793127398174 >= 30\n",
+      "[INFO] Checking Sell Signal...\n",
+      "[INFO] Reason for Not Sending Sell Signal: MACD: 16820.065497606993 >= Signal: 16238.745563885426\n",
+      "[INFO] Checking Buy Signal...\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 16102.116779655218 <= Signal: 16095.155820295073 or RSI: 53.50643211001215 >= 30\n",
+      "[INFO] Checking Sell Signal...\n",
+      "[INFO] Reason for Sell Signal: MACD: 16022.34469988197 < Signal: 16079.201404340423\n",
+      "[INFO] Sell order placed: {'error': {'message': '시장가 주문수량이 매수 호가 전체 잔량보다 많습니다. 주문수량을 줄이거나, 지정가 주문을 이용해 주세요.', 'name': 'volume_too_large_ask'}}\n",
+      "[INFO] Checking Buy Signal...\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 15942.572620116174 <= Signal: 16063.246988387264 or RSI: 53.05168435953448 >= 30\n",
+      "[INFO] Checking Sell Signal...\n",
+      "[INFO] Reason for Sell Signal: MACD: 15942.572620116174 < Signal: 16063.246988387264\n",
+      "[INFO] Sell order placed: {'error': {'message': '시장가 주문수량이 매수 호가 전체 잔량보다 많습니다. 주문수량을 줄이거나, 지정가 주문을 이용해 주세요.', 'name': 'volume_too_large_ask'}}\n",
+      "[INFO] Checking Buy Signal...\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 15942.572620116174 <= Signal: 16063.246988387264 or RSI: 53.05168435953448 >= 30\n",
+      "[INFO] Checking Sell Signal...\n",
+      "[INFO] Reason for Sell Signal: MACD: 15703.256380796432 < Signal: 16015.383740523315\n",
+      "[INFO] Sell order placed: {'error': {'message': '시장가 주문수량이 매수 호가 전체 잔량보다 많습니다. 주문수량을 줄이거나, 지정가 주문을 이용해 주세요.', 'name': 'volume_too_large_ask'}}\n",
+      "[INFO] Checking Buy Signal...\n",
+      "[INFO] Reason for Not Sending Buy Signal: MACD: 15703.256380796432 <= Signal: 16015.383740523315 or RSI: 52.38387356394087 >= 30\n",
+      "[INFO] Checking Sell Signal...\n",
+      "[INFO] Reason for Sell Signal: MACD: 15703.256380796432 < Signal: 16015.383740523315\n"
      ]
     }
    ],
@@ -180,8 +221,8 @@
     "\n",
     "\n",
     "def main():\n",
-    "    access_key = \"n6RhZqpXP76AfUzU7VXw9Zmc15IKRxDnVohvwBtB\"\n",
-    "    secret_key = \"eGIxtX2FuN03Froae1QwRgWNVc3l8n7WD21F60PB\"\n",
+    "    access_key = \"REDACTED FOR SECURITY REASON\"\n",
+    "    secret_key = \"REDACTED FOR SECURITY REASON\"\n",
     "    upbit = login_to_upbit(access_key, secret_key)\n",
     "    ticker = \"KRW-BTC\"\n",
     "    buy_price = None\n",
